// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip snapshot (dois temas): claro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 6,
      "left": 6,
      "right": 6,
      "top": 6,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFE6F1",
        "borderRadius": 12,
        "justifyContent": "center",
        "minWidth": 44,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#C7186B",
          },
          {},
          null,
        ]
      }
    >
      Mercado
    </Text>
  </View>
</View>
`;

exports[`Chip snapshot (dois temas): escuro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": true,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 6,
      "left": 6,
      "right": 6,
      "top": 6,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#351827",
        "borderRadius": 12,
        "justifyContent": "center",
        "minWidth": 44,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#FF4FA0",
          },
          {},
          null,
        ]
      }
    >
      Mercado
    </Text>
  </View>
</View>
`;
